primitives/api/test/tests/ui/declaring_old_block.stderr
error: `Block: BlockT` generic parameter will be added automatically by the `decl_runtime_apis!` macro! If you try to use a different trait than the substrate `Block` trait, please rename it locally.
 --> $DIR/declaring_old_block.rs:2:23
  |
2 |     pub trait Api<Block: BlockT> {
  |                          ^^^^^^

error: `Block: BlockT` generic parameter will be added automatically by the `decl_runtime_apis!` macro!
 --> $DIR/declaring_old_block.rs:2:16
  |
2 |     pub trait Api<Block: BlockT> {
  |                   ^^^^^
